# KAI-OOP

./: .gitignore
lab-1/: CMakeLists.txt  main.cpp  readme.md
lab-1/cs/: Lines.cs
